# spf-spoofer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/cli/: __init__.py  main.py  output.py
src/core/: __init__.py  dns.py  sender.py
src/models/: __init__.py  config.py  result.py
src/utils/: __init__.py  constants.py  exceptions.py
tests/: __init__.py  test_constants.py  test_dns.py  test_models.py  test_sender.py
