[project]
name = "spfspoofer"
version = "1.0.0"
description = "A robust SPF/DKIM/DMARC testing tool that sends emails directly to MX servers"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "SmookeyDev", email = "icaro@soarlabz.com" }]
keywords = ["spf", "dkim", "dmarc", "email", "smtp", "testing", "dns", "security", "deliverability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

dependencies = ["dnspython>=2.8.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[project.scripts]
spfspoofer = "src.cli:main"

[project.urls]
Homepage = "https://github.com/SmookeyDev/spfspoofer"
Repository = "https://github.com/SmookeyDev/spfspoofer"
Issues = "https://github.com/SmookeyDev/spfspoofer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ANN", "S", "PTH"]
ignore = ["E501", "ANN101", "ANN102", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
branch = true
